--- a/src/EventTrackerAdminWeb/EventTrackerAdminWeb.csproj
+++ b/src/EventTrackerAdminWeb/EventTrackerAdminWeb.csproj
@@ -380,6 +380,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="ModelBinders\MemberModelBinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
