--- a/src/EventTracker.DataModel/EventTracker.DataModel.csproj
+++ b/src/EventTracker.DataModel/EventTracker.DataModel.csproj
@@ -55,46 +55,49 @@
   <ItemGroup>
     <Compile Include="DependencyResolver.cs" />
     <Compile Include="Generated\Event.cs">
-      <DependentUpon>EventTracker.tt</DependentUpon>
+      <DependentUpon>EventTrackerDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Generated\EventAttendance.cs">
-      <DependentUpon>EventTracker.tt</DependentUpon>
+      <DependentUpon>EventTrackerDBModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Generated\EventTracker.Context.cs">
+    <Compile Include="Generated\EventTrackerDBModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>EventTracker.Context.tt</DependentUpon>
+      <DependentUpon>EventTrackerDBModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Generated\EventTracker.cs">
+    <Compile Include="Generated\EventTrackerDBModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>EventTracker.tt</DependentUpon>
+      <DependentUpon>EventTrackerDBModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Generated\EventTracker.Designer.cs">
+    <Compile Include="Generated\EventTrackerDBModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>EventTracker.edmx</DependentUpon>
+      <DependentUpon>EventTrackerDBModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Generated\HouseHold.cs">
-      <DependentUpon>EventTracker.tt</DependentUpon>
+      <DependentUpon>EventTrackerDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Generated\HouseHoldMember.cs">
-      <DependentUpon>EventTracker.tt</DependentUpon>
+      <DependentUpon>EventTrackerDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Generated\Member.cs">
-      <DependentUpon>EventTracker.tt</DependentUpon>
+      <DependentUpon>EventTrackerDBModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Generated\MemberAddress.cs">
+      <DependentUpon>EventTrackerDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Generated\MemberMembership.cs">
-      <DependentUpon>EventTracker.tt</DependentUpon>
+      <DependentUpon>EventTrackerDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Generated\Token.cs">
-      <DependentUpon>EventTracker.tt</DependentUpon>
+      <DependentUpon>EventTrackerDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Generated\User.cs">
-      <DependentUpon>EventTracker.tt</DependentUpon>
+      <DependentUpon>EventTrackerDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Generated\UserEvent.cs">
-      <DependentUpon>EventTracker.tt</DependentUpon>
+      <DependentUpon>EventTrackerDBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="GenericRepository\GenericRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -104,12 +107,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <EntityDeploy Include="Generated\EventTracker.edmx">
+    <EntityDeploy Include="Generated\EventTrackerDBModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>EventTracker.Designer.cs</LastGenOutput>
+      <LastGenOutput>EventTrackerDBModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Generated\EventTracker.edmx.diagram">
-      <DependentUpon>EventTracker.edmx</DependentUpon>
+    <None Include="Generated\EventTrackerDBModel.edmx.diagram">
+      <DependentUpon>EventTrackerDBModel.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
@@ -123,15 +126,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Generated\EventTracker.Context.tt">
+    <Content Include="Generated\EventTrackerDBModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>EventTracker.edmx</DependentUpon>
-      <LastGenOutput>EventTracker.Context.cs</LastGenOutput>
+      <DependentUpon>EventTrackerDBModel.edmx</DependentUpon>
+      <LastGenOutput>EventTrackerDBModel.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Generated\EventTracker.tt">
+    <Content Include="Generated\EventTrackerDBModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>EventTracker.edmx</DependentUpon>
-      <LastGenOutput>EventTracker.cs</LastGenOutput>
+      <DependentUpon>EventTrackerDBModel.edmx</DependentUpon>
+      <LastGenOutput>EventTrackerDBModel.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
