--- a/src/EventTrackerAPI/Web.config
+++ b/src/EventTrackerAPI/Web.config
@@ -9,7 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="EventTrackerDBContext" connectionString="Data Source=NAD2LCDV0001JLX\SQLEXPRESS;Initial Catalog=EventTrackerDB;User ID=webapi_user;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="EventTrackerDBContext" connectionString="Data Source=KIRSTEN-PC2\SQLEXPRESS;Initial Catalog=EventTrackerDB;User ID=webapi_user;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="AuthTokenExpiry" value="900"/>
