--- a/src/EventTrackerAdminWeb/EventTrackerAdminWeb.csproj
+++ b/src/EventTrackerAdminWeb/EventTrackerAdminWeb.csproj
@@ -238,40 +238,9 @@
     <Content Include="Scripts\bootstrap-datepicker.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\adapters\standalone-framework.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\adapters\standalone-framework.src.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\highcharts-3d.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\highcharts-3d.src.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\highcharts-all.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\highcharts-more.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\highcharts-more.src.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\highcharts.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\highcharts.src.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\modules\canvas-tools.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\modules\canvas-tools.src.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\modules\data.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\modules\data.src.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\modules\drilldown.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\modules\drilldown.src.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\modules\exporting.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\modules\exporting.src.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\modules\funnel.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\modules\funnel.src.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\modules\heatmap.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\modules\heatmap.src.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\modules\no-data-to-display.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\modules\no-data-to-display.src.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\modules\solid-gauge.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\modules\solid-gauge.src.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\themes\dark-blue.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\themes\dark-green.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\themes\dark-unica.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\themes\gray.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\themes\grid-light.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\themes\grid.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\themes\sand-signika.js" />
-    <Content Include="Scripts\angular-ui\Highcharts-4.0.1\js\themes\skies.js" />
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Scripts\angular.min.js.map" />
     <Content Include="Scripts\angular-route.min.js.map" />
     <Content Include="Scripts\angular-sanitize.min.js.map" />
@@ -281,6 +250,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <None Include="Properties\PublishProfiles\cfcga.pubxml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
