--- a/src/EventTrackerAdminWeb/Web.config
+++ b/src/EventTrackerAdminWeb/Web.config
@@ -28,7 +28,7 @@
     </pages>
   </system.web.webPages.razor>
   <connectionStrings>
-    <add name="EventTrackerDBContext" connectionString="Data Source=KIRSTEN-PC2\SQLEXPRESS;Initial Catalog=EventTrackerDB;User ID=webapi_user;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="EventTrackerDBContext" connectionString="Data Source=vfp77gx1ue.database.windows.net;Initial Catalog=EventTrackerDB;User ID=webapi_user;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
