--- a/src/EventTrackerAdminWeb/EventTrackerAdminWeb.csproj
+++ b/src/EventTrackerAdminWeb/EventTrackerAdminWeb.csproj
@@ -337,6 +337,8 @@
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\UnityMvcActivator.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\AdminController.Household.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\EventsController.cs" />
@@ -367,6 +369,13 @@
     <Content Include="Views\Error\AccessDenied.cshtml" />
     <Content Include="Views\Household\EditHousehold.cshtml" />
     <Content Include="Views\Household\DeleteHouseHold.cshtml" />
+    <Content Include="Views\Admin\Members.cshtml" />
+    <Content Include="Views\Admin\EditMember.cshtml" />
+    <Content Include="Views\Admin\MembershipHistory.cshtml" />
+    <Content Include="Views\Admin\Households.cshtml" />
+    <Content Include="Views\Admin\EditHousehold.cshtml" />
+    <Content Include="Views\Admin\_Members.cshtml" />
+    <Content Include="Views\Admin\_AddNewHouseholdMember.cshtml" />
     <None Include="Views\Household\List.cshtml" />
     <Content Include="Views\Membership\Members.cshtml" />
     <Content Include="Views\Household\_AddNewHouseholdMember.cshtml" />
